--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Interchain Berlin maintains the Tendermint Project, leads the architecture of the Inter-Blockchain Communication (IBC) Protocol and contributes to the Cosmos SDK in service of the Cosmos Network and the greater Interchain."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Interchain GmbH" />
+    <meta property="og:url" content="https://interchain.berlin/" />
+    
+    <meta property="og:image" content="%PUBLIC_URL%/Banner.png" />
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
